Validate and add REMS object to submission
